Setup web worker to parse and compare HAR files

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>HAR Diff</title>
     <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="./node_modules/lit/polyfill-support.js"></script>
-    <script type="module" src="./src/har-input"></script>
+    <script type="module" src="./src/har-app"></script>
   </head>
   <body>
-    <har-input label="HAR 1"></har-input>
-    <har-input label="HAR 2"></har-input>
+    <har-app />
   </body>
 </html>
