Coloring and spacing for diff

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <title>HAR Diff</title>
+    <link rel="stylesheet" href="./src/index.css" />
     <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="./node_modules/lit/polyfill-support.js"></script>
     <script type="module" src="./src/har-app"></script>
